# talk2arxiv

./: .gitignore  AGENTS.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  paper.html  pyproject.toml  tailwind.config.ts
.claude/: settings.local.json
app/: global-error.tsx  globals.css  layout.tsx  page.tsx
app/abs/[paper_id]/: page.tsx
app/api/: vectordb.py
app/components/: MessageForm.tsx  MessageList.tsx  PaperViewer.tsx  types.tsx
app/pdf/[paper_id]/: page.tsx
app/pdf/[paper_url]/: layout.tsx  page.tsx
components/: MessageForm.tsx  MessageList.tsx  PaperViewer.tsx
utils/: llmtools.tsx  types.tsx
